fixed spacing between buttons

--- a/src/components/nav-bar-top/nav-bar-top.css
+++ b/src/components/nav-bar-top/nav-bar-top.css
@@ -39,7 +39,7 @@
 .searchBar {
   z-index: 1000;
   color: white;
-  margin: 0 2.5vw 0 2.5vw;
+  margin: 0 2vw 0 2vw;
   padding: 5px;
   font-weight: 700;
   font-size: 24px;
